--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,25 @@
-__pycache__/ 
-*.pyc 
-._* 
-200.txt 
-4000.txt 
-reviews_submit.tsv 
+
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+.env/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Data
+# *.tsv
+# *.txt
